# olc-gamejam-2025

./: CMakeLists.txt  build.ps1  build_debug.ps1  build_release.ps1
assets/: assets.json
game/: Animation.cpp  Animation.h  Application.cpp  Application.h  AssetManager.h  Game.cpp  Game.h  GameplayScene.cpp  GameplayScene.h  IScene.h  MainMenuScene.cpp  MainMenuScene.h  Player.cpp  Player.h  Tilemap.cpp  Tilemap.h  main.cpp
